# questomatic

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Readme.md  toolchain-buildroot-uclibc.cmake  toolchain.cmake
15_pybind/: main.cpp
24_websocket_srv/: main.cpp
box-scripts/: common_utils.sh  remount-ro.sh  remount-rw.sh
cmake/: CMakeLists.config  toolchain.cmake
cmake/Modules/: FindJsoncpp.cmake
doc/: config.json  quest-sequencer.json
examples/: scenario.py
include/: flexibity  jsonrpc  websocketpp
include/flexibity/: base64.hpp  channel.hpp  channelMgr.hpp  channelMonitorRegex.hpp  config.hpp  exception.hpp  genericMgr.hpp  inject.hpp  ioSerial.hpp  jsonObjMacros.def  jsonObjMacros.undef  lock.hpp  log.h  mac.hpp  monitorRegex.hpp  mountUtil.hpp  programOptions.hpp  router.hpp  serialFeedAggregator.hpp  serialPortMgr.hpp  spawnUtil.hpp  util.hpp
include/flexibity/camera/: DumpProfile.hpp  camera.h  cameraMgr.hpp  debugServer.hpp  image.hpp  recognitionEngine.hpp  tlv.hpp
include/flexibity/iso8583/: isoField.hpp  isoProcess.hpp
include/flexibity/jsonrpc/: addMonitorMethod.hpp  audioPlayMethod.hpp  audioStopMethod.hpp  configMethod.hpp  genericMethod.hpp  injectMethod.hpp  jsonRpcBoost.hpp  jsonRpcSerial.hpp  jsonRpcSession.hpp  jsonRpcTransport.hpp  jsonRpcWebsocketClient.hpp  jsonRpcWebsocketServer.hpp  removeMonitorMethod.hpp  serverMgr.hpp  staticInjectMethod.hpp  unbreakMethod.hpp  updateMethod.hpp
include/flexibity/log/: log.h  log.hpp  logConfig.h  logConfig.hpp  syslog.h
include/flexibity/pos/: dut.hpp  udp_proxy.hpp
include/flexibity/tests/: jsonrpc-test.hpp
include/flexibity/unused/: outputStreamBoost.hpp  outputStreamTh.hpp
orange_controller/: example.py  main.cpp  modbus.cpp  modbus.hpp
scripts/: bootstrap.sh  build-docker.sh  build-tigerlash.sh  build.sh  config.sh  daemon.sh  debootstrap.sh  flash-image.sh  gen-image-id.sh  gen-image.sh  gen-md5.sh  install-tigerlash.sh  pretty_print.sh
